Working on Chapter 5

--- a/Marketplace/Marketplace.csproj
+++ b/Marketplace/Marketplace.csproj
@@ -5,4 +5,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Marketplace.Domain\Marketplace.Domain.csproj" />
+  </ItemGroup>
 </Project>
