--- a/Marketplace.Domain/Marketplace.Domain.csproj
+++ b/Marketplace.Domain/Marketplace.Domain.csproj
@@ -3,4 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Marketplace.Framework\Marketplace.Framework.csproj" />
+  </ItemGroup>
 </Project>
