--- a/Marketplace.Tests/Marketplace.Tests.csproj
+++ b/Marketplace.Tests/Marketplace.Tests.csproj
@@ -9,4 +9,7 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Marketplace.Domain\Marketplace.Domain.csproj" />
+  </ItemGroup>
 </Project>
